--- a/TransitHubXAML/Wallet.xaml
+++ b/TransitHubXAML/Wallet.xaml
@@ -1,12 +1,11 @@
-﻿<Window x:Class="TransitHubXAML.Wallet"
+﻿<Page x:Class="TransitHubXAML.Wallet"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TransitHubXAML"
         mc:Ignorable="d"
-        Title="Store" Height="800" Width="450"
-        ResizeMode="NoResize">
+        Title="Store" Height="800" Width="450">
 
     <Grid>
 		<TabControl HorizontalAlignment="Left" Height="700" VerticalAlignment="Top" Width="450" >
@@ -62,4 +61,4 @@
 
 		</TabControl>
     </Grid>
-</Window>
+</Page>
