--- a/TransitHubXAML/checkout.xaml
+++ b/TransitHubXAML/checkout.xaml
@@ -12,17 +12,17 @@
             <Label MouseDown="back_button" Content="&lt;" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Margin="33,2,0,0" VerticalAlignment="Top" Height="83" Width="96" FontSize="60"/>
             <Label Content="CHECKOUT" HorizontalAlignment="Left" Margin="149,22,0,0" VerticalAlignment="Top" Width="255" FontSize="40"/>
             <Rectangle Name="visaRectangle" MouseDown="visaChange" MouseUp="Visa_Click" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="113" Margin="36,126,0,0" Stroke="#FFB83A3F" VerticalAlignment="Top" Width="383"/>
-            <Label MouseDown="Visa_Click" Content="XXXXXX1234" HorizontalAlignment="Left" Margin="52,146,0,0" VerticalAlignment="Top" Width="101" FontSize="16"/>
-            <Label MouseDown="Visa_Click" Content="Expires 09/09" HorizontalAlignment="Left" Margin="48,182,0,0" VerticalAlignment="Top" FontSize="16"/>
+            <Label Name="visaLabel1"  MouseDown="Visa_Click" Content="XXXXXX1234" HorizontalAlignment="Left" Margin="52,146,0,0" VerticalAlignment="Top" Width="101" FontSize="16"/>
+            <Label Name="visaLabel2" MouseDown="Visa_Click" Content="Expires 09/09" HorizontalAlignment="Left" Margin="48,182,0,0" VerticalAlignment="Top" FontSize="16"/>
             <Rectangle Name="msRectangle" MouseDown="msChange" MouseUp="MasterCard_Click" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="113" Margin="33,290,0,0" Stroke="#FFB83A3F" VerticalAlignment="Top" Width="383"/>
-            <Label MouseDown="MasterCard_Click" Content="XXXXXX4567" HorizontalAlignment="Left" Margin="58,308,0,0" VerticalAlignment="Top" Width="101" FontSize="16"/>
-            <Label MouseDown="MasterCard_Click" Content="Expires 09/09" HorizontalAlignment="Left" Margin="52,344,0,0" VerticalAlignment="Top" FontSize="16"/>
-            <Image MouseDown="MasterCard_Click" Source="Resources/masterCard.PNG" HorizontalAlignment="Left" Height="85" Margin="279,305,0,0" VerticalAlignment="Top" Width="137"/>
+            <Label Name="msLabel1" MouseDown="MasterCard_Click" Content="XXXXXX4567" HorizontalAlignment="Left" Margin="58,308,0,0" VerticalAlignment="Top" Width="101" FontSize="16"/>
+            <Label  Name="msLabel2" MouseDown="MasterCard_Click" Content="Expires 09/09" HorizontalAlignment="Left" Margin="52,344,0,0" VerticalAlignment="Top" FontSize="16"/>
+            <Image Name="msImage" MouseDown="MasterCard_Click" Source="Resources/masterCard.PNG" HorizontalAlignment="Left" Height="85" Margin="279,305,0,0" VerticalAlignment="Top" Width="137"/>
             <Rectangle Name="ppRectangle" MouseDown="ppChange" MouseUp="Paypal_Click" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="113" Margin="33,447,0,0" Stroke="#FFB83A3F" VerticalAlignment="Top" Width="383"/>
-            <Label MouseDown="Paypal_Click" Content="my_email@realemail.com" HorizontalAlignment="Left" Margin="48,490,0,0" VerticalAlignment="Top" Width="189" FontSize="16"/>
-            <Image MouseDown="Visa_Click" Source="Resources/visa.PNG" HorizontalAlignment="Left" Height="62" Margin="269,152,0,0" VerticalAlignment="Top" Width="135"/>
-            <Image MouseDown="Paypal_Click" Source="Resources/paypal.PNG" HorizontalAlignment="Left" Height="107" Margin="289,447,0,0" VerticalAlignment="Top" Width="115"/>
-            <Button Click="Button_Click" Content="ONE TIME CARD USE" Foreground="White"  Background="#B83A3F"  HorizontalAlignment="Left" Margin="36,585,0,0" VerticalAlignment="Top" Width="368" Height="46" FontSize="30"/>
+            <Label Name="ppLabel1" MouseDown="Paypal_Click" Content="my_email@realemail.com" HorizontalAlignment="Left" Margin="48,490,0,0" VerticalAlignment="Top" Width="189" FontSize="16"/>
+            <Image Name="visaImage" MouseDown="Visa_Click" Source="Resources/visa.PNG" HorizontalAlignment="Left" Height="62" Margin="269,152,0,0" VerticalAlignment="Top" Width="135"/>
+            <Image Name="ppImage" MouseDown="Paypal_Click" Source="Resources/paypal.PNG" HorizontalAlignment="Left" Height="107" Margin="289,447,0,0" VerticalAlignment="Top" Width="115"/>
+            <Button Name="oneTimeCard" Click="Button_Click" Content="Pay without saving card" Foreground="White"  Background="#B83A3F"  HorizontalAlignment="Left" Margin="36,585,0,0" VerticalAlignment="Top" Width="368" Height="46" FontSize="30"/>
         </Grid>
     </ScrollViewer>
 </Page>
