--- a/TransitHubXAML/AccountEditPage.xaml
+++ b/TransitHubXAML/AccountEditPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="TransitHubXAML.AccountEditPage"
+<Page x:Class="TransitHubXAML.AccountEditPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -22,7 +22,7 @@
 
         </Grid.RowDefinitions>
         <TextBlock Grid.Column="1" FontSize="30" Grid.ColumnSpan="2" Margin="121,9,73,21" Text="Edit Account" Grid.RowSpan="2"/>
-        <Label Content="First Name:" Grid.Column="2" HorizontalAlignment="Left" Margin="4,16,0,0" Grid.Row="4" VerticalAlignment="Top" Height="44" Width="173" FontSize="22"/>
+        <Label Content="Name:" Grid.Column="2" HorizontalAlignment="Left" Margin="4,16,0,0" Grid.Row="4" VerticalAlignment="Top" Height="44" Width="173" FontSize="22"/>
         <Button Content="Save Changes" HorizontalAlignment="Left" Margin="1,611,0,0" VerticalAlignment="Top" Width="449" Height="70" FontSize="30" Background="#FFC43A3F" Foreground="White" Grid.Row="4" Grid.ColumnSpan="4"/>
         <Image Grid.Column="2" MouseDown="Back_Click" HorizontalAlignment="Left" Height="40" VerticalAlignment="Top" Width="69" Source="Resources/back-arrow.png" Margin="1,9,0,0" Grid.RowSpan="2"/>
         <Label x:Name="name" Loaded="Name_Loaded" Content="John Smith" Grid.Column="2" HorizontalAlignment="Left" Margin="5,56,0,0" Grid.Row="4" VerticalAlignment="Top" Height="44" Width="361" FontSize="25"/>
@@ -33,11 +33,11 @@
         <Label x:Name="birthday" Loaded="Birthday_Loaded" Content="March 14, 1979" Grid.Column="2" HorizontalAlignment="Left" Margin="4,177,0,0" Grid.Row="4" VerticalAlignment="Top" Height="44" Width="362" FontSize="25"/>
         <Label x:Name="email" Loaded="Email_Loaded" Content="john.smith@gmail.com" Grid.Column="2" HorizontalAlignment="Left" Margin="5,298,0,0" Grid.Row="4" VerticalAlignment="Top" Height="44" Width="379" FontSize="25"/>
         <Label x:Name="phone" Loaded="Phone_Loaded" Content="5876132829" Grid.Column="2" HorizontalAlignment="Left" Margin="4,419,0,0" Grid.Row="4" VerticalAlignment="Top" Height="44" Width="301" FontSize="25"/>
-        <Image Grid.Column="2" HorizontalAlignment="Left" Height="35" Grid.Row="4" VerticalAlignment="Top" Width="69" Source="Resources/edit.png" Margin="371,39,0,0" Grid.ColumnSpan="2"/>
-        <Image Grid.Column="2" HorizontalAlignment="Left" Height="35" Grid.Row="4" VerticalAlignment="Top" Width="69" Source="Resources/edit.png" Margin="371,160,0,0" Grid.ColumnSpan="2"/>
-        <Image Grid.Column="2" HorizontalAlignment="Left" Height="35" Grid.Row="4" VerticalAlignment="Top" Width="69" Source="Resources/edit.png" Margin="371,281,0,0" Grid.ColumnSpan="2"/>
-        <Image Grid.Column="2" HorizontalAlignment="Left" Height="35" Grid.Row="4" VerticalAlignment="Top" Width="69" Source="Resources/edit.png" Margin="371,402,0,0" Grid.ColumnSpan="2"/>
-        <Image Grid.Column="2" HorizontalAlignment="Left" Height="35" Grid.Row="4" VerticalAlignment="Top" Width="69" Source="Resources/edit.png" Margin="371,500,0,0" Grid.ColumnSpan="2"/>
+        <Image Grid.Column="2" MouseDown="Edit1" HorizontalAlignment="Left" Height="35" Grid.Row="4" VerticalAlignment="Top" Width="69" Source="Resources/edit.png" Margin="371,39,0,0" Grid.ColumnSpan="2"/>
+        <Image Grid.Column="2" MouseDown="Edit2" HorizontalAlignment="Left" Height="35" Grid.Row="4" VerticalAlignment="Top" Width="69" Source="Resources/edit.png" Margin="371,160,0,0" Grid.ColumnSpan="2"/>
+        <Image Grid.Column="2" MouseDown="Edit3" HorizontalAlignment="Left" Height="35" Grid.Row="4" VerticalAlignment="Top" Width="69" Source="Resources/edit.png" Margin="371,281,0,0" Grid.ColumnSpan="2"/>
+        <Image Grid.Column="2" MouseDown="Edit4" HorizontalAlignment="Left" Height="35" Grid.Row="4" VerticalAlignment="Top" Width="69" Source="Resources/edit.png" Margin="371,402,0,0" Grid.ColumnSpan="2"/>
+        <Image Grid.Column="2" MouseDown="Edit5" HorizontalAlignment="Left" Height="35" Grid.Row="4" VerticalAlignment="Top" Width="69" Source="Resources/edit.png" Margin="371,500,0,0" Grid.ColumnSpan="2"/>
         <Rectangle Fill="LightGray" Stroke="LightGray" Grid.ColumnSpan="4" Margin="1,362,-1,351" Grid.Row="4"/>
         <Rectangle Fill="#B83A3F" Stroke="Black" Grid.ColumnSpan="4" Margin="0,10,0,719" Grid.Row="4"/>
         <Rectangle Fill="LightGray" Stroke="LightGray" Grid.ColumnSpan="4" Margin="1,236,-1,477" Grid.Row="4"/>
