--- a/TransitHubXAML/cartPage.xaml
+++ b/TransitHubXAML/cartPage.xaml
@@ -26,13 +26,13 @@
             <Rectangle Fill="#FFACACAC" HorizontalAlignment="Left" Height="1" Stroke="{x:Null}" StrokeThickness="0.5" VerticalAlignment="Top" Width="450" Margin="0,169,0,0"/>
             <Rectangle Fill="#FFACACAC" HorizontalAlignment="Left" Height="1" Stroke="{x:Null}" StrokeThickness="0.5" VerticalAlignment="Top" Width="452" Margin="0,269,-2,0"/>
             <Label Content="Adult Monthly Pass" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="22,277,0,0" TextOptions.TextFormattingMode="Display" FontSize="20"/>
-            <Label Content="$2.40" HorizontalAlignment="Left" Margin="20,325,0,0" VerticalAlignment="Top" FontSize="20"/>
+            <Label Content="$109.00" HorizontalAlignment="Left" Margin="20,325,0,0" VerticalAlignment="Top" FontSize="20"/>
             <Rectangle Fill="#FFACACAC" HorizontalAlignment="Left" Height="1" Stroke="{x:Null}" StrokeThickness="0.5" VerticalAlignment="Top" Width="452" Margin="0,369,-2,0"/>
             <Label Content="Youth Monthly Pass" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="22,377,0,0" TextOptions.TextFormattingMode="Display" FontSize="20"/>
-            <Label Content="$2.40" HorizontalAlignment="Left" Margin="22,425,0,0" VerticalAlignment="Top" FontSize="20"/>
+            <Label Content="$79.00" HorizontalAlignment="Left" Margin="22,425,0,0" VerticalAlignment="Top" FontSize="20"/>
             <Rectangle Fill="#FFACACAC" HorizontalAlignment="Left" Height="1" Stroke="{x:Null}" StrokeThickness="0.5" VerticalAlignment="Top" Width="452" Margin="0,469,-2,0"/>
-            <Label Content="Low Income Pass" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="22,477,0,0" TextOptions.TextFormattingMode="Display" FontSize="20"/>
-            <Label Content="$2.40" HorizontalAlignment="Left" Margin="22,525,0,0" VerticalAlignment="Top" FontSize="20"/>
+            <Label Name="lowIncomePassLabel" Content="Low Income Pass" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="22,477,0,0" TextOptions.TextFormattingMode="Display" FontSize="20"/>
+            <Label Name="lowIncomePassLabel1" Content="$38.15" HorizontalAlignment="Left" Margin="22,525,0,0" VerticalAlignment="Top" FontSize="20"/>
             <Button Name="adultMonthlyMinus" Content="-" Background="White" HorizontalAlignment="Left" Margin="243,302,0,0" VerticalAlignment="Top" Width="40" Height="37" FontSize="25" Click="adultMonthlyMinus_Click" Foreground="#FF707070"/>
             <Label Name="adultMonthlyAmountLabel" Content="0" HorizontalAlignment="Left" Margin="306,304,0,0" VerticalAlignment="Top" FontSize="20"/>
             <Button Name="adultMonthlyPlus" Content="+" Background="White" HorizontalAlignment="Left" Margin="353,302,0,0" VerticalAlignment="Top" Width="40" Height="37" FontSize="25" Click="adultMonthlyPlus_Click" Foreground="#FF707070"/>
@@ -42,7 +42,7 @@
             <Button Name="lowIncomeMinus" Content="-" Background="White" HorizontalAlignment="Left" Margin="243,502,0,0" VerticalAlignment="Top" Width="40" Height="37" FontSize="25" Click="lowIncomeMinus_Click" Foreground="#FF707070"/>
             <Label Name="lowIncomeAmountLabel" Content="0" HorizontalAlignment="Left" Margin="306,504,0,0" VerticalAlignment="Top" FontSize="20"/>
             <Button Name="lowIncomePlus" Content="+" Background="White" HorizontalAlignment="Left" Margin="353,502,0,0" VerticalAlignment="Top" Width="40" Height="37" FontSize="25" Click="lowIncomePlus_Click" Foreground="#FF707070"/>
-            <Rectangle Fill="#FFACACAC" HorizontalAlignment="Left" Height="1" Stroke="{x:Null}" StrokeThickness="0.5" VerticalAlignment="Top" Width="442" Margin="10,569,-2,0"/>
+            <Rectangle Name="botRect" Fill="#FFACACAC" HorizontalAlignment="Left" Height="1" Stroke="{x:Null}" StrokeThickness="0.5" VerticalAlignment="Top" Width="442" Margin="10,569,-2,0"/>
             <Button Name="checkoutButton" Content="Checkout $0.00" Foreground="white" Background="#B83A3F" HorizontalAlignment="Left" Margin="28,588,0,0" VerticalAlignment="Top" Width="389" Height="58" FontSize="30" Click="checkoutButton_Click" BorderBrush="#FFB83A3F"/>
 
 
